--- a/Beranda.html
+++ b/Beranda.html
@@ -14,7 +14,7 @@
         <ul class="menu">
             <div class="beranda"><li><a href="#"><img src="img/home.png" alt="Home Icon" class="icon"> Beranda</a></li></div>
             <li><a href="#"><img src="img/materi.png" alt="Material Icon" class="icon"> Materi</a></li>
-            <li><a href="#"><img src="img/icon.png" alt="Info Icon" class="icon"> Informasi</a>
+            <li><a href="#"><img src="img/informasi.png" alt="Info Icon" class="icon"> Informasi</a>
                 
                 <ul class="submenu">
                     <li><a href="#">Rekomendasi Karir</a></li>
@@ -27,7 +27,7 @@
     </div>
     <div class="header">
         <button class="account-button">Akun</button>
-        <div class="user-icon"></div>
+        <div class="user-icon"><li><a href="#"><img src="img/icon.png" alt="Icon" class="user-icon"></li></div>
     </div>
 </body>
 </html>
