--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="nav-links">
             <a href="#">Beranda</a>
             <a href="#">Infromasi</a>
-            <a href="#" class="regis">Sign up</a>
+            <a href="#register.html" class="regis">Sign up</a>
         </div>
     </nav>
     <div class="content">
