--- a/Beranda.html
+++ b/Beranda.html
@@ -26,8 +26,13 @@
         </ul>
     </div>
     <div class="header">
+        <div class="Search">
+            <input type="search" id="searchinput" placeholder="Search...">
+            <button onclick="search()">Cari</button>
+        </div>
         <button class="account-button">Akun</button>
         <div class="user-icon"><li><a href="#"><img src="img/icon.png" alt="Icon" class="user-icon"></li></div>
+        
     </div>
 </body>
 </html>
