--- a/index.html
+++ b/index.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Navbar</title>
+    <title>TechPath</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
-
 <body>
-    <nav class="navbar">
-        <div class="logo">
-            <img src="img/logo2.png" alt="Logo">
-            <a href="#">BRAIN TECH</a>
+    <header>
+        <div class="container">
+            <h1 class="logo">TechPath</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">Beranda</a></li>
+                    <li><a href="#">Informasi</a></li>
+                    <li><a href="#">Materi</a></li>
+                    <li><a href="#">Kontak</a></li>
+                </ul>
+            </nav>
+            <div class="search-bar">
+                <input type="text" placeholder="Type to Search">
+                <button>Search</button>
+            </div>
         </div>
-        <div class="nav-links">
-            <a href="#">Beranda</a>
-            <a href="#">Infromasi</a>
-            <a href="#register.html" class="regis">Sign up</a>
-        </div>
-    </nav>
-    <div class="content">
-        <div class="content2">
-            <h1>selamat datang</h1>
-            <h2>Dunia Teknologi:<br>Temukan Potensi di Teknik Informatika</h2>
-        </div>
-       
-</body>
+    </header>
 
+    <section class="hero">
+        <div class="content">
+            <h2>Dunia<span>Teknologi</span></h2>
+            <p>Masih bingung mau masuk Jurusan kuliah apa?
+                Masuk Teknik Informatika Solusinyaa
+            </p>
+            <p> Disini bisa mempelajari tentang Web Development. 
+                Web development adalah proses pembuatan dan pemeliharaan situs web atau aplikasi web yang dapat diakses melalui internet.</p>
+            <p>dan kursus ini membantu kamu untuk tes kemampuan diri yang sudah kamu pelajari
+                kami juga menyediakan rekomendasi karir atau perusahaan IT yang cocok dengan skill kamu</p>
+            <a href="#" class="join-button">Join Us</a>
+        </div>
+        <div class="illustration">
+            <img src="img/elemen.PNG" alt="Person using a computer" />
+        </div>
+    </section>
+</body>
 </html>
