--- a/Beranda.html
+++ b/Beranda.html
@@ -1,38 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brain Tech</title>
     <link rel="stylesheet" href="css/beranda.css">
+    <script type="text/javascript" src="js/beranda.js" defer></script>
 </head>
+
 <body>
-    <div class="sidebar">
-        <div class="logo">
-            <img src="img/logo2.png" alt="Brain Tech Logo">
+    <nav>
+        <div class="gambar">
+            <img src="img/logopath.png" alt="logo">
         </div>
-        <ul class="menu">
-            <div class="beranda"><li><a href="#"><img src="img/home.png" alt="Home Icon" class="icon"> Beranda</a></li></div>
-            <li><a href="#"><img src="img/materi.png" alt="Material Icon" class="icon"> Materi</a></li>
-            <li><a href="#"><img src="img/informasi.png" alt="Info Icon" class="icon"> Informasi</a>
-                
+        <ul>
+            <li><a href="#">PROPIL</a></li>
+        </ul>
+    </nav>
+    <div class="sidebar">
+        <header>BRAN MENU</header>
+        <ul>
+            <li><a href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                        fill="#FFFFFF">
+                        <path
+                            d="M120-520v-320h320v320H120Zm0 400v-320h320v320H120Zm400-400v-320h320v320H520Zm0 400v-320h320v320H520ZM200-600h160v-160H200v160Zm400 0h160v-160H600v160Zm0 400h160v-160H600v160Zm-400 0h160v-160H200v160Zm400-400Zm0 240Zm-240 0Zm0-240Z" />
+                    </svg>
+                    <span>Dasboard</span>
+                </a>
+            </li>
+            <li>
+                <button  onclick=toggleSubmenu(this) class="dropdown-btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                        fill="#FFFFFF">
+                        <path d="M480-360 280-560h400L480-360Z" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                        fill="#FFFFFF">
+                        <path
+                            d="M400-400h160v-80H400v80Zm0-120h320v-80H400v80Zm0-120h320v-80H400v80Zm-80 400q-33 0-56.5-23.5T240-320v-480q0-33 23.5-56.5T320-880h480q33 0 56.5 23.5T880-800v480q0 33-23.5 56.5T800-240H320Zm0-80h480v-480H320v480ZM160-80q-33 0-56.5-23.5T80-160v-560h80v560h560v80H160Zm160-720v480-480Z" />
+                    </svg>
+                    <span>Kursus</span>
+                </button>
                 <ul class="submenu">
-                    <li><a href="#">Rekomendasi Karir</a></li>
-                    <li><a href="#">Rekomendasi Universitas</a></li>
-                    <li><a href="#">Tes Kecocokan</a></li>
-                    <li><a href="#">Komunitas</a></li>
+                   <div>
+                    <li><a href="#">soal</a></li>
+                    <li><a href="#">grafik</a></li>
+                    <li><a href="#">Nilai</a></li>
+                   </div>
                 </ul>
+            </li>
+            <li>
+                <button class="dropdown-btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                        fill="#FFFFFF">
+                        <path d="M480-360 280-560h400L480-360Z" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                        fill="#FFFFFF">
+                        <path
+                            d="M560-564v-68q33-14 67.5-21t72.5-7q26 0 51 4t49 10v64q-24-9-48.5-13.5T700-600q-38 0-73 9.5T560-564Zm0 220v-68q33-14 67.5-21t72.5-7q26 0 51 4t49 10v64q-24-9-48.5-13.5T700-380q-38 0-73 9t-67 27Zm0-110v-68q33-14 67.5-21t72.5-7q26 0 51 4t49 10v64q-24-9-48.5-13.5T700-490q-38 0-73 9.5T560-454ZM260-320q47 0 91.5 10.5T440-278v-394q-41-24-87-36t-93-12q-36 0-71.5 7T120-692v396q35-12 69.5-18t70.5-6Zm260 42q44-21 88.5-31.5T700-320q36 0 70.5 6t69.5 18v-396q-33-14-68.5-21t-71.5-7q-47 0-93 12t-87 36v394Zm-40 118q-48-38-104-59t-116-21q-42 0-82.5 11T100-198q-21 11-40.5-1T40-234v-482q0-11 5.5-21T62-752q46-24 96-36t102-12q58 0 113.5 15T480-740q51-30 106.5-45T700-800q52 0 102 12t96 36q11 5 16.5 15t5.5 21v482q0 23-19.5 35t-40.5 1q-37-20-77.5-31T700-240q-60 0-116 21t-104 59ZM280-494Z" />
+                    </svg>
+                    <span>Materi</span>
+                </button>
+                <ul class="submenu">
+                   <div>
+                    <li><a href="#">HMTL</a></li>
+                    <li><a href="#">CSS</a></li>
+                    <li><a href="#">JAVASCRIPT</a></li>
+                    <li><a href="#">PHP</a></li>
+                   </div>
+                </ul>
+            </li>
+            <li><a href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                        fill="#FFFFFF">
+                        <path
+                            d="M120-120v-560h160v-160h400v320h160v400H520v-160h-80v160H120Zm80-80h80v-80h-80v80Zm0-160h80v-80h-80v80Zm0-160h80v-80h-80v80Zm160 160h80v-80h-80v80Zm0-160h80v-80h-80v80Zm0-160h80v-80h-80v80Zm160 320h80v-80h-80v80Zm0-160h80v-80h-80v80Zm0-160h80v-80h-80v80Zm160 480h80v-80h-80v80Zm0-160h80v-80h-80v80Z" />
+                    </svg>
+                    <span>Perusahaan</span>
+                </a>
             </li>
         </ul>
     </div>
-    <div class="header">
-        <div class="Search">
-            <input type="search" id="searchinput" placeholder="Search...">
-            <button onclick="search()">Cari</button>
-        </div>
-        <button class="account-button">Akun</button>
-        <div class="user-icon"><li><a href="#"><img src="img/icon.png" alt="Icon" class="user-icon"></li></div>
-        
-    </div>
+    <footer class="footer">
+        <p>&copy;2024 tech path.ALL Rights Reserved</p>
+    </footer>
 </body>
+
 </html>
