--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 Web development adalah proses pembuatan dan pemeliharaan situs web atau aplikasi web yang dapat diakses melalui internet.</p>
             <p>dan kursus ini membantu kamu untuk tes kemampuan diri yang sudah kamu pelajari
                 kami juga menyediakan rekomendasi karir atau perusahaan IT yang cocok dengan skill kamu</p>
-            <a href="#" class="join-button">Join Us</a>
+            <a href="login.html" class="join-button">Join Us</a>
         </div>
         <div class="illustration">
             <img src="img/elemen.PNG" alt="Person using a computer" />
