--- a/login.html
+++ b/login.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
-    <div class="login-wrapper">
+    <div class="login-wrapper" id="login">
         <div class="logo-container">
-            <img src="img/logo2.png" alt="Logo" class="logo">
+            <img src="img/logopath.png" alt="Logo" class="logo">
         </div>
         <div class="login-container">
             <h2>Login</h2>
