--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="img">
-        <img src="img/logo2.png">
+        <img src="img/logopath.png">
     </div>
       <div class="wrapper">
         <h2>Registration</h2>
@@ -33,7 +33,7 @@
                 <input type="submit" value="Register Now">
             </div>
             <div class="text">
-                <h3>Already have an account? <a href="#"><span>Login Now</span></a></h3>
+                <h3>Already have an account? <a href="login.html"><span>Login Now</span></a></h3>
             </div>
         </form>
       </div>      
