--- a/Beranda.html
+++ b/Beranda.html
@@ -17,7 +17,7 @@
         <li><a href="Beranda.html">Dashboard</a></li>
         <li><a href="Materi.html">Materi</a></li>
         <li><a href="dasboard_soal.html">Soal</a></li>
-        <li><a href="#">Profiel</a></li>
+        <li><a href="profil.html">Profil</a></li>
         <li><a href="#">Settings</a></li>
       </ul>
       <div class="zapier-integration">
@@ -64,6 +64,7 @@
           <canvas id="skillPotentialChart"></canvas>
         </div>
       </section>
+
 
       <footer class="footer">
         <p>&copy; 2025 Dashboard. All rights reserved.</p>
