--- a/Materi.html
+++ b/Materi.html
@@ -33,25 +33,25 @@
             <i class="fas fa-code"></i> 
             <span>1</span>
             <p>HTML Basics</p>
-            <a href="#" class="button">Go to HTML Basics</a>
+            <a href="materihtml.html" class="button">Go to HTML Basics</a>
           </div>
           <div class="card">
             <i class="fab fa-css3-alt"></i> 
             <span>2</span>
             <p>CSS Fundamentals</p>
-            <a href="css_fundamentals.html" class="button">Go to CSS Fundamentals</a>
+            <a href="matericss.html" class="button">Go to CSS Fundamentals</a>
           </div>
           <div class="card">
             <i class="fab fa-js"></i> 
             <span>3</span>
             <p>JavaScript Introduction</p>
-            <a href="javascript_introduction.html" class="button">Go to JavaScript Introduction</a>
+            <a href="materijs.html" class="button">Go to JavaScript Introduction</a>
           </div>
           <div class="card">
             <i class="fab fa-php"></i> 
             <span>4</span>
             <p>PHP Basics</p>
-            <a href="php_basics.html" class="button">Go to PHP Basics</a>
+            <a href="materiphp.html" class="button">Go to PHP Basics</a>
           </div>
         </div>
       </section>
