--- a/admin.html
+++ b/admin.html
@@ -15,79 +15,80 @@
     }
 
     .sidebar {
-  height: 100vh;
-  width: 250px;
-  background-color: #1e203d;
-  color: white;
-  padding-top: 20px;
-  position: fixed;
-}
+      height: 100vh;
+      width: 250px;
+      background-color: #1e203d;
+      color: white;
+      padding-top: 20px;
+      position: fixed;
+    }
 
-.sidebar:hover {
-  width: 250px;
-}
+    .sidebar:hover {
+      width: 250px;
+    }
 
-.sidebar a {
-  color: white;
-  padding: 15px;
-  text-decoration: none;
-  display: block;
-  font-size: 16px;
-  transition: none;
-}
+    .sidebar a {
+      color: white;
+      padding: 15px;
+      text-decoration: none;
+      display: flex;
+      align-items: center; /* Membuat ikon dan teks sejajar secara vertikal */
+      font-size: 16px;
+      transition: none;
+    }
 
-.sidebar .icon {
-  font-size: 24px;
-}
+    .sidebar .icon {
+      font-size: 24px;
+      margin-right: 10px; /* Menambahkan jarak antara ikon dan teks */
+    }
 
-.content {
-  margin-left: 250px;
-  padding: 20px;
-}
+    .content {
+      margin-left: 250px;
+      padding: 20px;
+    }
 
-.card {
-  background-color: #696fec;
-  color: white;
-  margin-bottom: 20px;
-}
+    .card {
+      background-color: #696fec;
+      color: white;
+      margin-bottom: 20px;
+    }
 
-.card:hover {
-  transform: none;
-}
+    .card:hover {
+      transform: none;
+    }
 
-.btn-primary {
-  background-color: #696fec;
-  border: none;
-}
+    .btn-primary {
+      background-color: #696fec;
+      border: none;
+    }
 
-.btn-primary:hover {
-  background-color: #5a61d1;
-}
+    .btn-primary:hover {
+      background-color: #5a61d1;
+    }
 
-@media (max-width: 768px) {
-  .sidebar {
-    width: 60px;
-  }
-  .sidebar a {
-    padding: 10px;
-  }
-  .content {
-    margin-left: 60px;
-  }
-  .card {
-    font-size: 14px;
-  }
-  .sidebar .text {
-    display: none;
-  }
-  .sidebar .icon {
-    display: inline-block;
-  }
-  .sidebar h2 {
-    display: none;
-  }
-}
-
+    @media (max-width: 768px) {
+      .sidebar {
+        width: 60px;
+      }
+      .sidebar a {
+        padding: 10px;
+      }
+      .content {
+        margin-left: 60px;
+      }
+      .card {
+        font-size: 14px;
+      }
+      .sidebar .text {
+        display: none;
+      }
+      .sidebar .icon {
+        display: inline-block;
+      }
+      .sidebar h2 {
+        display: none;
+      }
+    }
 
     table th, table td {
       vertical-align: middle;
@@ -103,7 +104,6 @@
     table tr:hover {
       background-color: #f1f1f1;
     }
-
   </style>
 </head>
 <body>
