--- a/Materi.html
+++ b/Materi.html
@@ -10,20 +10,23 @@
 <body>
   <div class="dashboard-container">
     <aside class="sidebar">
-      <header>Main Office</header>
+      <header>TechPath</header>
       <ul>
         <li><a href="Beranda.html">Dashboard</a></li>
-        <li><a href="#">Accounts</a></li>
+        <li><a href="profil.html">Accounts</a></li>
         <li><a href="#">Settings</a></li>
       </ul>
       <div class="zapier-integration">
-        <button>Connect</button>
-      </div>
+        <div class="zapier-integration">
+          <button><a href="index.html" class="logout-link">Logout</a></button>
+        </div>
     </aside>
     <div class="main-content">
       <header class="topbar">
         <input type="text" placeholder="Search">
-        <div class="user-info">Theresa Roemer</div>
+        <div class="user-info"><div class="profile-image">
+          <img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture">
+        </div></div>
       </header>
 
       <section class="materi">
