--- a/dasboard_soal.html
+++ b/dasboard_soal.html
@@ -14,14 +14,18 @@
         <li><a href="Beranda.html">Dashboard</a></li>
       </ul>
       <div class="zapier-integration">
-        <button>Connect</button>
+        <div class="zapier-integration">
+          <button><a href="index.html" class="logout-link">Logout</a></button>
+        </div>
       </div>
     </aside>
     <div class="main-content">
       <header class="topbar">
         <h1>Quiz Dashboard</h1>
         <input type="text" placeholder="Search">
-        <div class="user-info">Theresa Roemer</div>
+        <div class="user-info"><div class="profile-image">
+          <img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture">
+        </div></div>
       </header>
       <section class="quiz-list">
         <h2>Quizzes</h2>
