--- a/matericss.html
+++ b/matericss.html
@@ -312,7 +312,7 @@ word-wrap: break-word;
         <li>Warna dan Latar belakang: manggunakan warna untuk latar belakang dan teks. dan mengatur gambar latar belakang dan pengulangan gambar.</li>
     </ul>
     
-            <a href="Beranda.html" class="beranda">&larr;Dashboard</a>
+            <a href="Materi.html" class="beranda">&larr;Dashboard</a>
         <a href="#intro" class="btn-next">Next &rarr;</a>
     </section>
 
