--- a/materihtml.html
+++ b/materihtml.html
@@ -294,7 +294,7 @@ td, th {
         <li>Penggunaan atribut dan formulir HTML</li>
         <li>Integrasi multimedia seperti gambar, video, dan audio</li>
     </ul> <br>
-    <a href="Beranda.html" class="beranda">&larr;Dashboard</a> 
+    <a href="Materi.html" class="beranda">&larr;Dashboard</a> 
         <a href="#intro" class="btn-next">Next &rarr;</a>
     </section>
 
