--- a/materijs.html
+++ b/materijs.html
@@ -326,7 +326,7 @@ td, th {
         <h2>Kesimpulan</h2>
         <p>JavaScript adalah bahasa yang sangat penting dalam pengembangan web. Dengan belajar JavaScript, Anda dapat membuat halaman web yang interaktif dan dinamis, serta mengembangkan aplikasi berbasis web yang lebih kompleks. Teruslah berlatih dengan mencoba kode JavaScript yang lebih rumit untuk meningkatkan keterampilan Anda!</p>
     <br>
-    <a href="Beranda.html" class="beranda">&larr;Dashboard</a>
+    <a href="Materi.html" class="beranda">&larr;Dashboard</a>
         <a href="#intro" class="btn-next">Next &rarr;</a>
     </section>
 
