--- a/materiphp.html
+++ b/materiphp.html
@@ -319,7 +319,7 @@ word-wrap: break-word;
         <li>$_COOKIE</li>
         <li>$_SESSION</li>
     </ul>
-    <a href="Beranda.html" class="beranda">&larr;Dashboard</a>
+    <a href="Materi.html" class="beranda">&larr;Dashboard</a>
         <a href="#intro" class="btn-next">Next &rarr;</a>
     </section>
 
