--- a/profil.html
+++ b/profil.html
@@ -235,17 +235,16 @@
         <li><a href="settings.html">Settings</a></li>
       </ul>
       <div class="zapier-integration">
-        <button>Connect</button>
-      </div>
+        <div class="zapier-integration">
+          <button><a href="index.html" class="logout-link">Logout</a></button>
+        </div>
     </aside>
     <div class="main-content">
       <header class="topbar">
         <h1>Profil Saya</h1>
       </header>
 
-      <!-- Profile Header Section -->
       <section class="profile-header">
-        <!-- Profile Image -->
         <div class="profile-image">
           <img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture">
         </div>
@@ -255,7 +254,6 @@
         </div>
       </section>
 
-      <!-- Profile Details Section -->
       <section class="profile-details">
         <div class="detail-item">
           <span>Email:</span>
@@ -275,7 +273,6 @@
         </div>
       </section>
 
-      <!-- Footer -->
       <footer class="footer">
         <p>&copy; 2024 Profile. All Rights Reserved.</p>
       </footer>
