--- a/soal_css/level_css.html
+++ b/soal_css/level_css.html
@@ -9,13 +9,14 @@
 <body>
   <div class="dashboard-container">
     <aside class="sidebar">
-      <header>Main Menu</header>
+      <header>TechPath</header>
       <ul>
-        <li><a href="dasboard_soal.html">Kembali</a></li>
+        <li><a href="../dasboard_soal.html">Kembali</a></li>
       </ul>
       <div class="zapier-integration">
-        <button>Connect</button>
-      </div>
+        <div class="zapier-integration">
+          <button><a href="index.html" class="logout-link">Logout</a></button>
+        </div>
     </aside>
 
     <div class="main-content">
