--- a/soal_css/soal_css.html
+++ b/soal_css/soal_css.html
@@ -11,13 +11,14 @@
 <body>
   <div class="dashboard-container">
     <aside class="sidebar">
-      <header>Main Menu</header>
+      <header>TechPath</header>
       <ul>
         <li><a href="level_css.html">Dashboard</a></li>
       </ul>
       <div class="zapier-integration">
-        <button>Connect</button>
-      </div>
+        <div class="zapier-integration">
+          <button><a href="index.html" class="logout-link">Logout</a></button>
+        </div>
     </aside>
     <div class="main-content">
       <header class="topbar">
