--- a/html/level_html.html
+++ b/html/level_html.html
@@ -21,8 +21,9 @@
     <div class="main-content">
       <header class="topbar">
         <h1>Hypertext markup language</h1>
-        <input type="text" placeholder="Search">
-        <div class="user-info">Theresa Roemer</div>
+        <div class="user-info"><div class="profile-image">
+          <a href="profil.html"><img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture"></a>
+        </div></div>
       </header>
 
       <section class="quiz-levels">
