--- a/soal_css/level_css.html
+++ b/soal_css/level_css.html
@@ -21,11 +21,10 @@
 
     <div class="main-content">
       <header class="topbar">
-        <h1>QUIZ</h1>
+        <h1>Quiz title</h1>
         <input type="text" placeholder="Search">
         <div class="user-info"><div class="profile-image">
           <a href="profil.html"><img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture"></a>
-          
         </div></div>
       </header>
 
