--- a/soal_css/soal_css.html
+++ b/soal_css/soal_css.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quiz Dashboard</title>
+  <title>Quiz</title>
   <link rel="stylesheet" href="../css/soal_html.css">
 </head>
 
@@ -22,9 +22,11 @@
     </aside>
     <div class="main-content">
       <header class="topbar">
-        <h1>Quiz Title</h1>
+        <h1>Quiz title</h1>
         <input type="text" placeholder="Search">
-        <div class="user-info">Theresa Roemer</div>
+        <div class="user-info"><div class="profile-image">
+          <a href="profil.html"><img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture"></a>
+        </div></div>
       </header>
       <section class="quiz-layout">
         <div class="questions-container" id="questions-container">
