--- a/login.html
+++ b/login.html
@@ -1,33 +1,266 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-    <link rel="stylesheet" href="css/login.css">
+    <title>Login</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
+        }
+
+        body {
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: #1e203d;
+            padding: 20px;
+        }
+
+        .image-container {
+            max-width: 60%;
+            display: flex;
+            justify-content: center;
+            margin-bottom: 15px;
+        }
+
+        .image-container img {
+            max-width: 80%;
+            height: auto;
+        }
+
+        .wrapper {
+            position: relative;
+            max-width: 450px; /* Lebar form lebih besar */
+            width: 100%;
+            background: #151961;
+            padding: 20px; /* Padding lebih besar */
+            border-radius: 6px;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .wrapper h2 {
+            font-size: 20px; /* Ukuran judul lebih besar */
+            font-weight: 600;
+            color: white;
+            text-align: center;
+            margin-bottom: 10px;
+        }
+
+        .wrapper h2::before {
+            content: '';
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            bottom: -5px;
+            height: 3px;
+            width: 30px;
+            border-radius: 12px;
+            background: white;
+        }
+
+        .wrapper form {
+            margin-top: 15px;
+        }
+
+        .wrapper .input-box {
+            height: 45px; /* Tinggi input lebih tinggi */
+            margin: 10px 0; /* Margin antar input lebih lebar */
+            position: relative;
+            display: flex;
+            align-items: center;
+        }
+
+        .wrapper .input-box input {
+            height: 100%;
+            width: 100%;
+            outline: none;
+            padding: 0 15px 0 40px;
+            font-size: 14px; /* Ukuran font lebih besar */
+            color: black;
+            border: 1.5px solid white;
+            border-bottom-width: 2.5px;
+            border-radius: 6px;
+            transition: all 0.3s ease;
+        }
+
+        .input-box input:focus,
+        .input-box input:valid {
+            border-color: #1e203d;
+        }
+
+        .password-toggle {
+            position: absolute;
+            top: 50%;
+            right: 15px;
+            transform: translateY(-50%);
+            cursor: pointer;
+            color: white;
+            font-size: 18px;
+        }
+
+        .input-box i {
+            position: absolute;
+            left: 10px;
+            font-size: 18px;
+            color: white;
+        }
+
+        form .policy {
+            display: flex;
+            align-items: center;
+        }
+
+        form h3 {
+            color: white;
+            font-size: 14px; /* Ukuran font lebih besar */
+            font-weight: 500;
+            margin-left: 10px;
+        }
+
+        span {
+            color: #696fec;
+        }
+
+        .input-box.button input {
+            color: white;
+            letter-spacing: 1px;
+            border: none;
+            background: #1e203d;
+            cursor: pointer;
+            transition: background 0.3s;
+            padding: 8px 0;
+            font-size: 14px;
+        }
+
+        .input-box.button input:hover {
+            background: #696fec;
+        }
+
+        form .text h3 a {
+            color: white;
+            text-decoration: none;
+        }
+
+        form .text h3 a:hover {
+            text-decoration: underline;
+        }
+
+        /* Media query untuk perangkat dengan lebar max 480px (mobile) */
+        @media (max-width: 480px) {
+            .wrapper {
+                padding: 15px;
+            }
+
+            .wrapper h2 {
+                font-size: 18px;
+            }
+
+            .wrapper .input-box {
+                height: 40px;
+            }
+
+            .wrapper .input-box input {
+                font-size: 13px;
+                padding: 0 10px 0 30px;
+            }
+
+            form h3 {
+                font-size: 12px;
+            }
+
+            .input-box.button input {
+                font-size: 13px;
+            }
+
+            /* Hiding the image on smaller screens (mobile) */
+            .image-container {
+                display: none;
+            }
+        }
+
+        /* Media query untuk perangkat dengan lebar max 768px (tablet) */
+        @media (max-width: 768px) {
+            .wrapper {
+                padding: 20px;
+            }
+
+            .wrapper h2 {
+                font-size: 20px;
+            }
+
+            .wrapper .input-box {
+                height: 45px;
+            }
+
+            .wrapper .input-box input {
+                font-size: 14px;
+                padding: 0 12px 0 35px;
+            }
+
+            form h3 {
+                font-size: 14px;
+            }
+
+            .input-box.button input {
+                font-size: 14px;
+            }
+
+            /* Hiding the image on smaller screens (tablet) */
+            .image-container {
+                display: none;
+            }
+        }
+    </style>
 </head>
 <body>
-    <div class="login-wrapper" id="login">
-        <div class="logo-container">
-            <img src="img/logopath.png" alt="Logo" class="logo">
-        </div>
-        <div class="login-container">
-            <h2>Login</h2>
-            <form action="#" method="">
-                <div class="input-group">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" name="username" placeholder="Masukkan username" required>
-                </div>
-                <div class="input-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" name="password" placeholder="Masukkan password" required>
-                </div>
-                <button type="submit" class="login-btn" onclick="window.location.href='Beranda.html';">Login</button>
-                <div class="signup-link">
-                    <p>Belum punya akun? <a href="register.html">Daftar</a></p>
-                </div>
-            </form>
-        </div>
+    <div class="image-container">
+        <img src="img/logopath.png" alt="Logo" />
     </div>
+    <div class="wrapper">
+        <h2>Login</h2>
+        <form action="#">
+            <div class="input-box">
+                <i class="fa fa-user"></i> <!-- Ikon untuk nama -->
+                <input type="text" id="username" placeholder="Enter your username" required>
+            </div>
+            <div class="input-box">
+                <i class="fa fa-lock"></i> <!-- Ikon untuk password -->
+                <input type="password" id="password" placeholder="Enter your Password" required>
+                <span class="password-toggle" id="toggle-password"><img src="https://img.icons8.com/ios-filled/50/ffffff/visible.png" alt="eye-icon" width="20" height="20"></span>
+            </div>
+            <div class="policy">
+                <input type="checkbox" id="terms">
+                <h3>I accept terms & conditions</h3>
+            </div>
+            <div class="input-box button">
+                <input type="submit" value="Login Now">
+            </div>
+            <div class="text">
+                <h3>Don't have an account? <a href="register.html" style="text-decoration: none;"><span>Register Now</span></a></h3>
+            </div>            
+        </form>
+    </div>
+
+    <script>
+        // Script untuk toggle password visibility
+        const togglePassword = document.getElementById("toggle-password");
+        const passwordInput = document.getElementById("password");
+
+        togglePassword.addEventListener("click", function() {
+            const type = passwordInput.type === "password" ? "text" : "password";
+            passwordInput.type = type;
+            togglePassword.innerHTML = type === "password" 
+                ? '<img src="https://img.icons8.com/ios-filled/50/ffffff/visible.png" alt="eye-icon" width="20" height="20">' 
+                : '<img src="https://img.icons8.com/ios-filled/50/ffffff/invisible.png" alt="eye-icon" width="20" height="20">';
+        });
+
+    </script>
 </body>
 </html>
